# CRC_APPENDER

./: Cargo.toml  teste 2.txt  teste.txt
src/: main.rs
