[package]
name = "CRC_APPENDER"
version = "0.1.0"
edition = "2021"
description = "An simple CLI for CRC checkup and calculation"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crc="3.0.1"
